# geo-agent-service

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ai-chat-api.md  auth-api.md  gis-data-api.md  layer-tree-api.md  后端-geo-agent-service-AI聊天GIS工具链改造计划.md  后端-geo-agent-service-Chat图层样式控制开发文档.md
src/geo_agent_service/: __init__.py  main.py
src/geo_agent_service/api/: router.py
src/geo_agent_service/api/routes/: health.py
src/geo_agent_service/core/: config.py
src/geo_agent_service/modules/: __init__.py
src/geo_agent_service/modules/ai_chat/: __init__.py  model_client.py  repository.py  routes.py  run_repository.py  schemas.py  service.py
src/geo_agent_service/modules/auth/: repository.py  routes.py  schemas.py  service.py
src/geo_agent_service/modules/gis_data/: __init__.py  repository.py  routes.py  sample_datasets.py  schemas.py  service.py  storage.py
src/geo_agent_service/persistence/: database.py
src/geo_agent_service/sample_data/: __init__.py  airports.geojson  populated_places.geojson  ports.geojson
src/geo_agent_service/schemas/: agent.py  session.py
src/geo_agent_service/services/: datasets.py  map_services.py
src/geo_agent_service/tools/: __init__.py  attribute_summary.py  base.py  geoprocess.py  metadata_search.py  registry.py  spatial_filter.py
src/geo_agent_service/workflows/: geo_agent.py
tests/: test_ai_chat_api.py  test_attribute_summary_tool.py  test_auth_api.py  test_geoprocess_tool.py  test_gis_data_api.py  test_gis_data_service.py  test_health.py  test_layer_tree_api.py  test_spatial_filter_tool.py
(+11 files in other folders)
