[project]
name = "ai-webgis-agent-studio-geo-agent-service"
version = "0.1.0"
description = "Python Geo Agent service for AI WebGIS Agent Studio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "langgraph>=0.2.0",
  "geopandas>=1.0.0",
  "shapely>=2.0.0",
  "pyproj>=3.6.0",
  "sqlalchemy>=2.0.0",
  "geoalchemy2>=0.15.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_agent_service"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["geo_agent_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
